# SpeakSum

./: .env.example  .gitignore  AGENT_INTEGRATION_TEST_PROMPT.md  AGENT_PROMPT.md  AGENT_TESTING_PROMPT.md  CLAUDE.md  README.md  deploy.sh  pyproject.toml
docs/: BACKEND_DESIGN_REVIEW.md  BACKEND_DESIGN_REVIEW_FEEDBACK.md  BRD.md  DEPLOYMENT.md  FRONTEND_DESIGN.md  FRONTEND_DESIGN_REVIEW.md  PRODUCT_DESIGN.md  TECH_ARCHITECTURE.md  TECH_DESIGN.md  WORKFLOW.md  backend-impl-design.md  openapi.yaml
docs/project-process/: PROJECT_MEMORY.md  README.md  REVIEW_WORKFLOW_GUIDE.md
docs/project-process/agents/: AGENT_INTERACTIONS.md  AGENT_ROLES.md
docs/project-process/improvements/: PROCESS_IMPROVEMENTS.md
docs/project-process/mainline/: PROJECT_TIMELINE.md
docs/project-process/outputs/: DELIVERABLES.md
docs/project-process/prompts/: AGENT_1_PRODUCT_DESIGN.md  AGENT_2_ARCHITECTURE.md  AGENT_3_BACKEND_IMPL.md  AGENT_4_FRONTEND_DESIGN.md  AGENT_5_FRONTEND_IMPL.md  AGENT_6_INTEGRATION_TEST.md  RESPONSE_ARCHITECTURE_REVIEW.md  RESPONSE_BACKEND_REVIEW.md  RESPONSE_FRONTEND_REVIEW.md  RESPONSE_PRODUCT_REVIEW.md  REVIEWER_ARCHITECTURE.md  REVIEWER_BACKEND_IMPL.md  REVIEWER_FRONTEND_IMPL.md  REVIEWER_PRODUCT_DESIGN.md
docs/project-process/skills/: SKILL_USAGE.md
docs/project-process/templates/: REVIEW_TEMPLATE_CODE.md  REVIEW_TEMPLATE_PRODUCT_DESIGN.md
docs/superpowers/plans/: 2026-04-03-backend-impl.md  2026-04-05-meeting-viewpoint-pipeline.md  (+1 more)
frontend/: .env.development  .env.production  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/coverage/: coverage-final.json  index.html
frontend/src/: index.css  main.tsx
frontend/src/test/: setup.ts
src/speaksum/: __init__.py  main.py
tests/: conftest.py  test_api_auth.py  test_api_contents.py  test_api_edge_cases.py  test_api_knowledge_graph.py  test_api_meetings.py  test_api_process.py  test_api_settings.py  test_api_speaker_identities.py  test_api_speeches.py  test_api_upload.py  test_celery_tasks.py  test_content_processor.py  test_database.py  test_exceptions.py  test_file_parser.py  test_file_parser_more.py  test_knowledge_graph_builder.py  test_llm_client.py  test_llm_client_more.py  test_main.py  test_models.py  test_placeholder.py  test_schema_compatibility.py  test_schemas.py  test_security.py  test_speaker_evidence.py  test_text_processor.py  test_text_processor_more.py
(+159 files in other folders)
